# demisto-sdk

./: .coveragerc  .env  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .markdownlint.json  .mypy.ini  .pdm.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .sourcery.yaml  .test_durations  CHANGELOG.md  CONTRIBUTION.md  CommonServerPython.py  Dockerfile  LICENSE  Pipfile  README.md  app.py  backup_prompt_ai_0.txt  changelog_temp.md  configfile_test.json  conftest.py  demisto-sdk-development.sh  demisto-sdk.code-workspace  deploy.sh  find_fields.py  go.sum  history_prompt.txt  init_validation_script.py  new_script.py  package-lock.json  package.json  playbook-TestPlaybook_Test.yml  poetry.tree  pyproject.toml  pytest.ini  regex training.py  (+13 more)
.changelog/: 0000.yml  11036.yml  11037.yml  11050.yml  14938.yml  2294.yml  2801.yml  3175.yml  3177.yml  3178.yml  3301.yml  3316.yml  3322.yml  3326.yml  35123.yml  3578.yml  3677.yml  3820.yml  3828.yml  3859.yml  3860.yml  3873.yml  3878.yml  3912.yml  3919.yml  3920.yml  3921.yml  3923.yml  3932.yml  3937.yml  3950.yml  3952.yml  3958.yml  3961.yml  3962.yml  3963.yml  3970.yml  3971.yml  3972.yml  3973.yml  (+811 more)
.circleci/: config.yml
.devcontainer/: .zshrc  Dockerfile  create_certs.sh  demisto-sdk.code-workspace  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  auto_assign.yml  config.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/instructions/: README.md  ci.instructions.md  commands.instructions.md  common-helpers.instructions.md  content-graph.instructions.md  docs-and-changelog.instructions.md  e2e-tests.instructions.md  integration-authoring.instructions.md  legacy-validators.instructions.md  lint.instructions.md  scripts.instructions.md  test-suite.instructions.md  tests.instructions.md  validators.instructions.md
.github/prompts/: changelog.prompt.md  new-command.prompt.md  new-validator.prompt.md
.github/scripts/: slack_notifier.py
.github/workflows/: adopt_ruff.yml  auto-merge-dependabot.yml  close_jira_issue_by_pr_merge.yml  codeql.yml  dependabot-auto-merge.yml  generate_validate_docs.yml  handle-new-external-pr.yml  handle_new_contribution.yml  link_edited_pr_to_jira_issue.yml  link_pr_to_jira_issue.py  main.yml  merge-private-and-public-id-sets.yml  on-push.yml  pytest_durations.yml  pythonpackage.yml  release-to-pypi.yml  run-content-infrastructure-tests.yml  run_unit_tests.yml  sdk-release.yml  test_precommit.yml  tests.yml  update-test-durations.yml  validate-changelog-content-infra-tests.yml  validate-changelog-update copy.yml  validate-changelog-update.yml  validate-changelog.yml
.gitlab/: helper_functions.sh
.hooks/: bootstrap  install.python-poetry.py
FeedTAXII/ReleaseNotes/: 1_0_1.md
Packs/ForTesting/: pack_metadata.json
Packs/TestPack/: pack_metadata.json
TestSuite/: JSONBased.py  agent_config.py  agentix_action.py  agentix_action_test.py  agentix_agent.py  agentix_skill.py  agentix_test.py  case_field.py  case_layout.py  case_layout_rule.py  classifier.py  collection.py  conf_json.py  content_list.py  contribution.py  correlation_rule.py  dashboard.py  docker_native_image_config.py  file.py  generic_definition.py  generic_field.py  generic_module.py  generic_type.py  global_secrets.py  incident_field.py  incident_type.py  indicator_field.py  indicator_type.py  integration.py  job.py  json_based.py  layout.py  layout_rule.py  mapper.py  modeling_rule.py  pack.py  parsing_rule.py  playbook.py  release_notes.py  repo.py  (+19 more)
TestSuite/assets/: default_docker_native_image_config.json
Tests/: id_set.json
Utils/: create_changelog_yml.py  handle_new_contribution.py  pytest_junit_parser.py  update_additional_dependencies.py
Utils/github_workflow_scripts/: contribution_comment.md  handle_external_pr.py  handle_external_pr.sh  handle_new_contribution.py  link_pr_to_jira_issue.sh  send_slack_message.py
Utils/github_workflow_scripts_tests/: handle_new_contribution_test.py  link_pr_to_jira_issue_test.py
demisto-sdk/: __main__.py  client.py  main.py
demisto_sdk/: Warnings_Summary.ini  __init__.py  __main__.py  __main__original.py  client.py  config.py  core.py  generate_docs_commands.py  git_tools.py  main.py  test_main.py
demisto_sdk.egg-info/: SOURCES.txt
demisto_sdk/client/: client.py
demisto_sdk/commands/: extract_outputs.py
demisto_sdk/commands/lint/resources/pipfile_python3/: Pipfile  dev-requirements.txt  pyproject.toml
demisto_sdk/common/: configuration.py  constants.py  demisto_client.py  git_tools.py  known_words.py  rest_api.py  sdk_baseclass.py  tools.py  util.py
demisto_sdk/dev_tools/: initiator.py  lint_manager.py  linter.py  runner.py  spell_checker.py  thread_lock.py  uploader.py
demisto_sdk_back/: main.py
docs/: Run Playbook command.md  create_command.md  demisto-sdk-docker.md  development_guide.md  format_command.md  init_command.md  lint_command.md  release_guide.md  run_command.md  run_playbook_command.md  secrets.md  spell_check_command.md  split_yml_command.md  unify_command.md  upload_command.md  validate_command.md
lint2/: diff.py  diff_test.py  parse_linter.py
plans/: AS107_is_valid_display_label_context_path.md  TR001_is_valid_trigger_id.md  add-supported-modules-to-integration-parameters.md  agentix-agent-restructuring-plan.md
tests/: conf_test.py  conftest.py  constants_regex_test.py  docker_test.py  extractor_test.py  file_validator_test.py  find_type_test.py  formatting_test.py  generate_docs_test.py  id_set.json  id_test.py  image_test.py  incident_field_test.py  integration_test.py  json_to_outputs_test.py  lint_manager_test.py  linter_test.py  pack_unique_files_test.py  release_notes_test.py  script_test.py  secrets_test.py  structure_test.py  test_playbook_generator_test.py  test_test.py  tests_constants.py  tools_test.py  unifier_test.py  update_id_set_test.py  validators_test.py
tests_end_to_end/: dockerserver_tests.py  e2e_tests_constansts.py  e2e_tests_graph.py  e2e_tests_utils.py  graph_sanity_checks.py  test_dockerserver.py  test_e2e_demisto_sdk_flow_playbook.py
(+3284 files in other folders)
