[tool.poetry]
name = "demisto-sdk"
version = "1.27.0"
description = "\"A Python library for the Demisto SDK\""
authors = ["Demisto"]
license = "MIT"
readme = "README.md"
classifiers=[
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython'
]
exclude = ["TestSuite/**", "*/tests/*", "tests"]

[tool.poetry.scripts]
demisto-sdk = "demisto_sdk.__main__:main"
update-additional-dependencies = "demisto_sdk.scripts.update_additional_dependencies:main"
sdk-changelog = "demisto_sdk.scripts.changelog.changelog:main"
merge-coverage-report = "demisto_sdk.scripts.merge_coverage_report:main"
merge-pytest-reports = "demisto_sdk.scripts.merge_pytest_reports:main"
validate-conf-json = "demisto_sdk.scripts.validate_conf_json:main"
init-validation = "demisto_sdk.scripts.init_validation_script:main"
validate-deleted-files = "demisto_sdk.scripts.validate_deleted_files:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
autopep8 = "^2.0.4"
bandit = "^1.7.4"
mypy = "^0.982"
pylint = "^2.13.0"
beautifulsoup4 = "^4.11.1"
chardet = "^5.2.0"  # Used by bs4.dammit. Can be replaced with `charset-normalizer` which is 20x faster.
click = "^8.0.0"
coloredlogs = "^15.0.1"
configparser = "^5.2.0"
coverage = "^7.2.1"
decorator = "^5.1.1"  # Used once on 'error.py'. Can probably be removed and written ourselves with a few additional lines.
demisto-py = "^3.2.10"
dictor = "^0.1.9"  # Used in a single place (download command), should be easy to implement ourselves. Remove?
docker = "^5.0.3"
flatten-dict = "^0.4.2"  # Used in a single place (download command), should be easy to implement ourselves. Remove?
gitdb = "^4.0.9"  # Used only for 'except gitdb.exc.BadName' in GitUtil. Probably a sub-dependency of another module. Remove and handle exception without importing?
google-cloud-storage = "^2.13.0"
inflection = "^0.5.1"  # No updates for over a year, used in a single place. We use 2 very simple functions (~6 lines of code). Remove?
jsonschema = "^4.4.0"
mergedeep = "^1.3.4"  # Used (only by download command)
networkx = "^2.7.1"
nltk = "^3.7"  # Used (only by doc-review command)
prettytable = "^3.2.0"
pykwalify = "^1.8.0"
pyspellchecker = "^0.6.3"  # Used (only by doc-review command)
requests = "^2.27.1"
"ruamel.yaml" = "^0.17.21"
slack-sdk = "^3.17.0"
tenacity = "^8.2.3"
tabulate = ">=0.8.9,<0.10.0"
ujson = "^5.1.0"
urllib3 = "^1.26.9"
wcmatch = "^8.3"
GitPython = "^3.1.37"
Pebble = ">=4.6.3,<6.0.0"
PyPDF2 = "^1.28.6"
giturlparse = "^0.10.0"
python-dotenv = "^0.20.0"
importlib-resources = "^5.6.0"
dictdiffer = "^0.9.0"
imagesize = "^1.3.0"
dateparser = "^1.1.1"
ordered-set = { version = "^4.1.0", optional = true }
neo4j = "^5.14.0"
pydantic = "^1.10"
typer = {extras = ["all"], version = ">=0.6.1,<0.8.0"}
packaging = "^23.1"
orjson = "^3.8.3"  # Used by 'orjson_handler', which is not in use anywhere (we use 'ujson' instead).
more-itertools = "^9.0.0"
junitparser = "^3.1.0"
google-cloud-secret-manager = "^2.16.2"
json5 = "^0.9.14"
klara = { version = "^0.6.3", optional = true }
pre-commit = "^3.5.0"
lxml = "^5.0.0"
pytz = "^2024.1"
toml = "^0.10.2"  # Should we replace with 'tomli' as 'toml' isn't maintained and supports only up to 3.9?
python-dateutil = "^2.8.2"
astor = { version = "^0.8.1", optional = true }

[tool.poetry.group.dev.dependencies]
mitmproxy = "^8.0.0"
werkzeug = "<3.0.0"  # Needed for 'mitmproxy'. See https://stackoverflow.com/a/77215455
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-datadir-ng = "^1.1.1"
pytest-mock = "^3.7.0"
pytest-subprocess = "^1.4.1"
requests-mock = "^1.9.3"
black = "^22.10.0"
ipykernel = "^6.16.1"
ruff = "^0.1.11"
pytest-github-actions-annotate-failures = "^0.2.0"
pytest-sugar = "^1.0.0"
pygithub = "^2.2.0"
freezegun = "^1.4.0"

[tool.poetry.group.typing.dependencies]
types-dateparser = "^1.1.0"
types-requests = "2.28.11"
types-pytz = "^2024.1.0.20240203"
types-python-dateutil = "^2.8.10"
types-tabulate = ">=0.8.6,<0.10.0"
types-futures = "^3.3.8"
types-decorator = "^5.1.8"
types-ujson = "^5.6.0.0"
types-pkg-resources = "^0.1.3"  # We use pkg_resources, but it's deprecated (https://setuptools.pypa.io/en/latest/pkg_resources.html). Replace with 'importlib.resources'?
types-toml = "^0.10.8.7"

[tool.poetry.extras]
generate-unit-tests = ["astor", "klara", "ordered-set"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
python_version = "3.8"
show_error_codes = true
follow_imports = "silent"
pretty = true
allow_redefinition = true
exclude = "tests/.*|demisto_sdk/commands/init/templates/.*"

[tool.vulture]
exclude = ["*/tests/*"]
min_confidence = 80
paths = ["demisto_sdk", "TestSuite"]
sort_by_size = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    "F403",
    "F405",
    "E501",
    "W293",  # handled by Black
]


exclude = [
    "demisto_sdk/tests/test_files/",
    "demisto_sdk/commands/generate_unit_tests/tests/test_files/",
    "demisto_sdk/commands/init/templates",
    "demisto_sdk/commands/generate_yml_from_python/tests/generate_yml_from_python_test.py"
]

select = [
    "C9",
    "E",
    "F",
    "I",
    "PLE",
    "RUF100",
    "T10",
    "T20",
    "TID251",
    "W",
    "PTH107",
    "PTH113",
    "PTH110",
    "PTH119",
]

target-version = "py38"

[tool.ruff.mccabe]
max-complexity = 30

[tool.ruff.flake8-tidy-imports]
[tool.ruff.flake8-tidy-imports.banned-api]
# "logging".msg = "The logging framework is banned. Please use demisto_sdk.commands.common.logger."
"json".msg = "use JSON_Handler instead"
"json5".msg = "use JSON_Handler instead"
"ujson".msg = "use JSON_Handler instead"
"orjson".msg = "use JSON_Handler instead"
"ruamel.yaml".msg = "use YAML_Handler instead"
"distutils.version".msg = "Use packaging.version.Version instead"
"packaging.version.LooseVersion".msg = "Use packaging.version.Version instead"
"git.Repo".msg = "Use GitUtil instead"
