[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demisto-sdk"
version = "1.31.10"
description = "\"A Python library for the Demisto SDK\""
license = {file = "LICENSE"}
authors = [{name = "Demisto"}]
readme = "README.md"
classifiers = [
  'Intended Audience :: Developers',
  'Natural Language :: English',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython'
]
exclude = [
  "TestSuite/**",
  "tests_end_to_end/**",
  "demisto_sdk/tests/**",
  "demisto_sdk/**/tests/**",
  "demisto_sdk/**/test_data/**",
  "demisto_sdk/**/test_files/**"
]
requires-python = ">=3.8,<3.12"
dependencies = [
  "autopep8>=2.0.4,<3",
  "bandit>=1.7.4,<2",
  "mypy>=0.982,<1",
  "pylint>=2.17.0,<2.18",
  "vulture>=2.3,<3",
  "beautifulsoup4>=4.11.1,<5",
  "chardet>=4,<6",
  "click>=8,<9",
  "coloredlogs>=15.0.1,<16",
  "configparser>=5.2.0,<6",
  "coverage>=7.2.1,<7.4",
  # in 7.4 we get empty results
  "decorator>=5.1.1,<6",
  "demisto-py>=3.2.10,<4",
  "dictor>=0.1.9,<0.2",
  "docker>=7.1.0,<8",
  "flatten-dict>=0.4.2,<0.5",
  "gitdb>=4.0.9,<5",
  "google-cloud-storage>=2.13.0,<3",
  "inflection>=0.5.1,<0.6",
  "jsonschema>=4.4.0,<5",
  "mergedeep>=1.3.4,<2",
  "networkx>=2.7.1,<3",
  "nltk==3.8.1",
  "prettytable>=3.2.0,<4",
  "pykwalify>=1.8.0,<2",
  "pyspellchecker>=0.6.3,<0.7",
  "requests>=2.27.1,<3",
  "ruamel.yaml>=0.17.21,<0.18",
  "slack-sdk>=3.17.0,<4",
  "tenacity>=8.4.1,<9",
  "tabulate>=0.8.9,<0.10.0",
  "ujson>=5.1.0,<6",
  "urllib3>=1.26,<3",
  "wcmatch>=8.3,<9",
  "yamlordereddictloader>=0.4.0,<0.5",
  "GitPython>=3.1.37,<4",
  "Pebble>=4.6.3,<6.0.0",
  "PyPDF2>=1.28.6,<2",
  "giturlparse>=0.10.0,<0.11",
  "pytest-freezegun>=0.4.2,<0.5",
  "python-dotenv>=0.20.0,<0.21",
  "importlib-resources>=5.6.0,<6",
  "dictdiffer>=0.9.0,<0.10",
  "imagesize>=1.3.0,<2",
  "dateparser>=1.1.1,<2",
  "ordered-set>=4.1.0,<5",
  "paramiko>=3.4.1,<4.0",
  "neo4j>=5.14.0,<6",
  "pydantic>=1.10,<2",
  "typer>=0.12.5,<0.13",
  "packaging>=24.0,<25",
  "orjson>=3.8.3,<4",
  "more-itertools>=10.0.0,<11",
  "junitparser>=3.1.0,<4",
  "google-cloud-secret-manager>=2.18.3,<3",
  "json5>=0.9.14,<0.10",
  "typing-extensions>=4.1.1,<5", # not a mypy types- dependency
  "pre-commit>=3.5.0,<4",
  "lxml>=5.0.0,<6",
  "uv>=0.1.5,<0.2",
  "toml>=0.10.2,<0.11",
  "werkzeug>=2.2.0,<3" # Added as mitmproxy8 -> flask<2.1
]

[project.optional-dependencies]
build = ["gsutil==5.17"]
generate-unit-tests = ["klara>=0.6.3,<0.7"]
types = [
  "types-requests>=2.31.0.20240311,<3",
  "types-mock>=4.0.15,<5",
  "types-setuptools>=69.2.0.20240317,<70",
  "types-ujson>=5.6.0.0,<6",
  "types-decorator>=5.1.8,<6",
  "types-toml>=0.10.8.7,<0.11",
  "types-tabulate>=0.9.0.20240106,<0.10",
  "types-pytz>=2024.1.0.20240203,<2025",
  "types-dateparser>=1.1.4.20240106,<2",
  "types-python-dateutil>=2.9.0.20240316,<3"
]

[project.scripts]
demisto-sdk = "demisto_sdk.__main__:main"
sdk-changelog = "demisto_sdk.scripts.changelog.changelog:main"
merge-coverage-report = "demisto_sdk.scripts.merge_coverage_report:main"
merge-pytest-reports = "demisto_sdk.scripts.merge_pytest_reports:main"
validate-content-path = "demisto_sdk.scripts.validate_content_path:main"
validate-conf-json = "demisto_sdk.scripts.validate_conf_json:main"
init-validation = "demisto_sdk.scripts.init_validation_script:main"
validate-deleted-files = "demisto_sdk.scripts.validate_deleted_files:main"
validate-file-permission-changes = "demisto_sdk.scripts.validate_file_permission_changes:main"
prevent-mypy-global-ignore = "demisto_sdk.scripts.prevent_mypy_global_ignore:main"

[tool.mypy]
python_version = "3.8"
follow_imports = "silent"
exclude = "tests/.*|demisto_sdk/commands/init/templates/.*"

[tool.ruff]
exclude = [
  "demisto_sdk/tests/test_files/",
  "demisto_sdk/commands/init/tests/test_files",
  "demisto_sdk/commands/generate_unit_tests/tests/test_files/",
  "demisto_sdk/commands/init/templates",
  "demisto_sdk/commands/generate_yml_from_python/tests/generate_yml_from_python_test.py"
]
target-version = "py38"

[tool.ruff.lint]
ignore = ["F403", "F405", "E501"]
select = [
  "C9",
  "E",
  "F",
  "I",
  "PLE",
  "RUF100",
  "T10",
  "T20",
  "TID251",
  "W",
  "PTH107",
  "PTH113",
  "PTH110",
  "PTH119"
]

[tool.ruff.lint.flake8-tidy-imports]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"distutils.version".msg = "Use packaging.version.Version instead"
"git.Repo".msg = "Use GitUtil instead"
# "logging".msg = "The logging framework is banned. Please use demisto_sdk.commands.common.logger."
"json".msg = "use JSON_Handler instead"
"json5".msg = "use JSON_Handler instead"
"orjson".msg = "use JSON_Handler instead"
"packaging.version.LooseVersion".msg = "Use packaging.version.Version instead"
"ruamel.yaml".msg = "use YAML_Handler instead"
"str.StrEnum".msg = "Import from demisto_sdk.commands.common.StrEnum for <3.11 compatability"
"ujson".msg = "use JSON_Handler instead"

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.uv]
dev-dependencies = [
  "mitmproxy>=8,<9",
  "mock>=4.0.3,<5",
  "pytest>=7.1.1,<8",
  "pytest-cov>=4.0.0,<5",
  "pytest-datadir-ng>=1.1.1,<2",
  "pytest-mock>=3.7.0,<4",
  "pytest-subprocess>=1.4.1,<2",
  "requests-mock>=1.9.3,<2",
  "ipykernel>=6.16.1,<7",
  "ruff>=0.5.2,<0.6",
  "pytest-github-actions-annotate-failures>=0.2.0,<0.3",
  "pytest-sugar>=1.0.0,<2",
  "pygithub>=2.2.0,<3"
]

[tool.vulture]
exclude = ["*/tests/*"]
min_confidence = 80
paths = ["demisto_sdk", "TestSuite"]
