[metadata]
name = demisto-sdk
version = 0.3.5
description = A Python library for the Demisto SDK.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demisto/demisto-sdk
author = "Demisto"
author_email = ""
license = MIT
license_file = LICENSE
classifiers =
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: Implementation :: CPython'

[options]
packages = find:
install_requires =
    bandit>=1.6.2
    bs4>=0.0.1
    click>=7.0
    dateparser>=0.7.2
    demisto-py>=2.0.7
    flake8>=3.7.9
    mypy>=0.761
    pipenv==2018.11.26
    pykwalify>=1.7.0
    PyPDF2>=1.26.0
    PyYAML>=5.1.2
    requests>=2.22.0
    ruamel.yaml>=0.16.5
    yamlordereddictloader>=0.4.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    demisto-sdk = demisto_sdk.__main__:demisto_sdk_cli
