[tool.poetry]
name = "lint"
version = "0.1.0"
description = "Cortex XSOAR content"
authors = ["Cortex XSOAR"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.2,<3.11"
flake8 = "^4.0.0"
pylint = "^2.17.4"
pytest-mock = "^3.10.0"
vulture = "^2.7"
requests-mock = "^1.10.0"
pytest-asyncio = "^0.21.0"
pytest-xdist = "^3.3.1"
pytest-datadir-ng = "^1.1.1"
freezegun = "^1.2.2"
pytest-json = "^0.4.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.76.0"
